--- a/app/eu/factorx/citizens/angular/views/enterprise/results/enterprise-results.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/results/enterprise-results.html
@@ -31,7 +31,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <button ui-sref="root.householdActions"
+                <button ui-sref="root.enterpriseActions"
                         class="pull-left cr-mega-button">
                     <i class="fa fa-caret-left fa-2x"></i>
                     <span>&nbsp;</span>
