--- a/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
@@ -4,7 +4,7 @@
         <div class="row cr-profile-header">
 
             <div class="col-md-6">
-                <h2 ng-bind-html="'register.title' | translate"></h2>
+                <h2 ng-bind-html="'enterprise.register.title' | translate"></h2>
 
 
             </div>
