--- a/app/eu/factorx/citizens/angular/views/enterprise/actions/enterprise-actions.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/actions/enterprise-actions.html
@@ -5,7 +5,7 @@
         <div class="row cr-profile-header">
 
             <div class="col-md-6">
-                <h2 ng-bind-html="'actions.title' | translate"></h2>
+                <h2 ng-bind-html="'enterprise.actions.title' | translate"></h2>
 
 
             </div>
