--- a/app/eu/factorx/citizens/angular/views/enterprise/actions/enterprise-actions.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/actions/enterprise-actions.html
@@ -23,38 +23,16 @@
 
         <div class="row cr-actions-content">
 
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-offset-3">
-                <cr-topic
-                    image="enterprise/topics/topic_office"
-                    view="$/angular/views/enterprise/actions/topics/actions-office.html"
-                    controller="ModalTopicCtrl"
-                    window-class="cr-theme-green"
-                    label="topic.office.label"
-                    ng-callback="onTopicClose()"
-                    ></cr-topic>
-            </div>
+            <div class="col-md-12">
 
+                <h3>{{ 'enterprise.office.label' | translate }}</h3>
+                <cr-enterprise-form ng-questions="['Q10110', 'Q10120']"></cr-enterprise-form>
+                <h3>{{ 'enterprise.building.label' | translate }}</h3>
+                <cr-enterprise-form ng-questions="['Q10210', 'Q10220', 'Q10230', 'Q10240', 'Q10250', 'Q10260', 'Q10270', 'Q10280', 'Q10290']"></cr-enterprise-form>
+                <h3>{{ 'enterprise.process.label' | translate }}</h3>
+                <cr-enterprise-form ng-questions="['Q10310','Q10320','Q10330','Q10340','Q10350','Q10360','Q10380','Q10390','Q10395']"></cr-enterprise-form>
+                <h3>{{ 'enterprise.other.label' | translate }}</h3>
 
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <cr-topic
-                    image="enterprise/topics/topic_building"
-                    view="$/angular/views/enterprise/actions/topics/actions-building.html"
-                    controller="ModalTopicCtrl"
-                    window-class="cr-theme-blue"
-                    label="topic.building.label"
-                    ng-callback="onTopicClose()"
-                    ></cr-topic>
-            </div>
-
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <cr-topic
-                    image="enterprise/topics/topic_process"
-                    view="$/angular/views/enterprise/actions/topics/actions-process.html"
-                    controller="ModalTopicCtrl"
-                    window-class="cr-theme-red"
-                    label="topic.process.label"
-                    ng-callback="onTopicClose()"
-                    ></cr-topic>
             </div>
 
         </div>
