Draft workflow enterprise

--- a/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
@@ -140,6 +140,7 @@
                 <button
                     class="btn btn-small cr-mega-button pull-right"
                     ng-show="isAuthenticated()"
+                    ng-click="saveEnterprise()"
                     ui-sref="root.enterpriseActions">
 
                     <i class="fa fa-caret-right fa-2x"></i>
@@ -149,7 +150,7 @@
                 </button>
 
 
-                <button class="btn btn-small cr-theme-green cr-mega-button pull-left" ng-disabled="loading == true"
+                <button class="btn btn-small cr-theme-green cr-mega-button pull-right" ng-disabled="loading == true"
                         ng-hide="isAuthenticated()"
                         ng-click="saveEnterprise()">
                     <i class="fa fa-save"></i>
