wip actions enterprise

--- a/app/assets/_cr-enterprise-form.less
+++ b/app/assets/_cr-enterprise-form.less
@@ -46,9 +46,15 @@
                     color: #000;
                     font-style: normal;
                     white-space: normal;
+                    position: relative;
+                    padding-right: 1em;
+
+
+                    input {
+                        min-width: 10em;
+                        width: 100%;
+                    }
                 }
-
-
 
                 input {
                     width: 5em;
