wip actions enterprise

--- a/app/assets/_cr-enterprise-form.less
+++ b/app/assets/_cr-enterprise-form.less
@@ -68,6 +68,9 @@
                         background: #faa;
                     }
 
+                    &[readonly="readonly"] {
+                        border: none;
+                    }
                 }
 
                 &.cr-enterprise-form-power input {
