--- a/app/assets/_cr-messenger.less
+++ b/app/assets/_cr-messenger.less
@@ -10,8 +10,9 @@
         .messenger-message {
             box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
             border: 1px solid rgba(0, 0, 0, .2);
-            border-radius: 6px;
+            border-radius: 3px;
             margin-bottom: 5px;
+            padding: 8px 6px;
 
             &:before {
                 content: ' ';
@@ -20,19 +21,20 @@
                 top: 0;
                 right: 0;
                 display: inline-block;
-                border-radius: 6px 6px 0 0;
+                border-radius: 3px 3px 0 0;
                 background-image: url('/assets/images/modal/title_gradientBG.png');
                 background-size: 100% 100%;
-                height: 8px;
+                height: 4px;
             }
 
             .messenger-message-inner:before {
-                font-family: 'FontAwesome';
+                font-family: 'FontAwesome', fantasy;
                 font-size: 1.5em;
                 float: left;
                 display: inline-block;
                 width: 2em;
-                height: 2em;
+                height: 1em;
+                margin-top: -4px;
             }
 
             &.message-error {
@@ -57,6 +59,7 @@
                 }
 
                 .messenger-message-inner:before {
+
                     content: '\f00c';
                 }
 
@@ -92,6 +95,15 @@
                 background: transparent;
                 border: none;
                 float: right;
+                padding: 0;
+                vertical-align: middle;
+                font-size: 0;
+                margin-top: -4px;
+                &:after {
+                    font-size: 20px;
+                    font-family: 'FontAwesome', fantasy;
+                    content: '\f00d';
+                }
             }
 
             .messenger-message-inner {
