--- a/app/eu/factorx/citizens/angular/views/admin/main.html
+++ b/app/eu/factorx/citizens/angular/views/admin/main.html
@@ -1,85 +1,71 @@
 <div class="cr-directives-demo tc-super-admin">
 
-
     <div class="container">
-        <div class="row">
-            <div class="col-md-9">
-                <h3>Administrator panel</h3>
 
-            </div>
-            <div class="col-md-3">
-                <a ng-click="logout()"> Logout</a>
-            </div>
-        </div>
+        <cr-admin-navigation-bar></cr-admin-navigation-bar>
+
         <div class="row">
             <div class="col-md-12">
-                <tabset class="cr-tabset">
 
-                    <tab>
-                        <tab-heading>
-                            <i class="fa fa-gear"></i> Réductions
-                        </tab-heading>
-                        <table style="width: 100%">
-                            <tr style="border-bottom:1px solid #b0b0b0;">
-                                <th rowspan="2" colspan="3"></th>
-                                <th rowspan="2" colspan="3" style="border-left : 1px solid #b0b0b0;">Potential</th>
-                                <th colspan="12" style="border-left : 1px solid #b0b0b0;">Effective</th>
-                            </tr>
-                            <tr  style="border-bottom:1px solid #b0b0b0;">
-                                <th colspan="3" style="border-left : 1px solid #b0b0b0;">Day 1</th>
-                                <th colspan="3" style="border-left : 1px solid #b0b0b0;">Day 2</th>
-                                <th colspan="3" style="border-left : 1px solid #b0b0b0;">Day 3</th>
-                                <th colspan="3" style="border-left : 1px solid #b0b0b0;">Day 4</th>
-                            </tr>
-                            <tr>
-                                <th>Date</th>
-                                <th>nb survey</th>
-                                <th>nb participants</th>
-                                <th>17-18H</th>
-                                <th>18-19H</th>
-                                <th>19-20H</th>
-                                <th>17-18H</th>
-                                <th>18-19H</th>
-                                <th>19-20H</th>
-                                <th>17-18H</th>
-                                <th>18-19H</th>
-                                <th>19-20H</th>
-                                <th>17-18H</th>
-                                <th>18-19H</th>
-                                <th>19-20H</th>
-                                <th>17-18H</th>
-                                <th>18-19H</th>
-                                <th>19-20H</th>
-                            </tr>
-                            <tr ng-repeat="batch in batchs | orderBy:'date':'reverse'">
-                                <td>{{batch.date | date:"yyyy-MM-dd" }}</td>
-                                <td>  {{batch.potentialBatch.nbSurveys}} </td>
-                                <td>  {{batch.potentialBatch.nbParticipants}} </td>
+                <table style="width: 100%">
+                    <tr style="border-bottom:1px solid #b0b0b0;">
+                        <th rowspan="2" colspan="3"></th>
+                        <th rowspan="2" colspan="3" style="border-left : 1px solid #b0b0b0;">Potential</th>
+                        <th colspan="12" style="border-left : 1px solid #b0b0b0;">Effective</th>
+                    </tr>
+                    <tr  style="border-bottom:1px solid #b0b0b0;">
+                        <th colspan="3" style="border-left : 1px solid #b0b0b0;">Day 1</th>
+                        <th colspan="3" style="border-left : 1px solid #b0b0b0;">Day 2</th>
+                        <th colspan="3" style="border-left : 1px solid #b0b0b0;">Day 3</th>
+                        <th colspan="3" style="border-left : 1px solid #b0b0b0;">Day 4</th>
+                    </tr>
+                    <tr>
+                        <th>Date</th>
+                        <th>nb survey</th>
+                        <th>nb participants</th>
+                        <th>17-18H</th>
+                        <th>18-19H</th>
+                        <th>19-20H</th>
+                        <th>17-18H</th>
+                        <th>18-19H</th>
+                        <th>19-20H</th>
+                        <th>17-18H</th>
+                        <th>18-19H</th>
+                        <th>19-20H</th>
+                        <th>17-18H</th>
+                        <th>18-19H</th>
+                        <th>19-20H</th>
+                        <th>17-18H</th>
+                        <th>18-19H</th>
+                        <th>19-20H</th>
+                    </tr>
+                    <tr ng-repeat="batch in batchs | orderBy:'date':'reverse'">
+                        <td>{{batch.date | date:"yyyy-MM-dd" }}</td>
+                        <td>  {{batch.potentialBatch.nbSurveys}} </td>
+                        <td>  {{batch.potentialBatch.nbParticipants}} </td>
 
-                                <td>  {{getValue(batch.potentialBatch.batchResultItemList, null,"FIRST") | number:2}} </td>
-                                <td>  {{getValue(batch.potentialBatch.batchResultItemList, null,"SECONDE") | number:2}} </td>
-                                <td>  {{getValue(batch.potentialBatch.batchResultItemList, null,"THIRD") | number:2}} </td>
+                        <td>  {{getValue(batch.potentialBatch.batchResultItemList, null,"FIRST") | number:2}} </td>
+                        <td>  {{getValue(batch.potentialBatch.batchResultItemList, null,"SECONDE") | number:2}} </td>
+                        <td>  {{getValue(batch.potentialBatch.batchResultItemList, null,"THIRD") | number:2}} </td>
 
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY1","FIRST") | number:2}} </td>
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY1","SECONDE") | number:2}} </td>
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY1","THIRD") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY1","FIRST") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY1","SECONDE") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY1","THIRD") | number:2}} </td>
 
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY2","FIRST") | number:2}} </td>
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY2","SECONDE") | number:2}} </td>
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY2","THIRD") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY2","FIRST") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY2","SECONDE") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY2","THIRD") | number:2}} </td>
 
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY3","FIRST") | number:2}} </td>
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY3","SECONDE") | number:2}} </td>
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY3","THIRD") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY3","FIRST") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY3","SECONDE") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY3","THIRD") | number:2}} </td>
 
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY4","FIRST") | number:2}} </td>
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY4","SECONDE") | number:2}} </td>
-                                <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY4","THIRD") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY4","FIRST") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY4","SECONDE") | number:2}} </td>
+                        <td>  {{getValue(batch.effectiveBatch.batchResultItemList, "DAY4","THIRD") | number:2}} </td>
 
-                            </tr>
-                        </table>
-                    </tab>
-                </tabset>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
