wip computing enterprise

--- a/app/eu/factorx/citizens/angular/views/enterprise/results/enterprise-results.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/results/enterprise-results.html
@@ -20,7 +20,7 @@
                 <p class="cr-intro" ng-bind-html="'results.intro' | translate | params:[nbParticipants]"></p>
 
                 <p class="cr-intro"
-                   ng-bind-html="'result.result' | translate | params:[effectiveAverageReduction, totalEffectiveAverageReduction]"></p>
+                   ng-bind-html="'result.result.enterprise' | translate | params:[kwh, meanPower, totalEffectiveAverageReduction]"></p>
             </div>
         </div>
 
