--- a/app/eu/factorx/citizens/angular/views/admin/risks.html
+++ b/app/eu/factorx/citizens/angular/views/admin/risks.html
@@ -44,4 +44,6 @@
         </div>
     </div>
 
+    <a class="btn btn-primary btn-lg" href="http://www.google.be">Je participe</a>
+    <a class="btn btn-primary btn-lg" href="http://www.google.be">Je ne participe pas</a>
 </div>
