--- a/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
@@ -123,7 +123,6 @@
                 <!-- agreement -->
                 <cr-question label="account.info.terms&conditions.label">
                     <button class="btn btn-small cr-theme-magenta cr-mega-button"
-
                             ng-click="openModal('household/terms')">
                         <i class="fa fa-newspaper-o"></i>
                         <span>&nbsp;</span>
@@ -137,11 +136,10 @@
                 <!-- advertisemnt -->
                 <p ng-bind-html="'account.info.summaryemail.label' | translate"></p>
 
-                <button
-                    class="btn btn-small cr-mega-button pull-right"
-                    ng-show="isAuthenticated()"
-                    ng-click="saveEnterprise()"
-                    ui-sref="root.enterpriseActions">
+                <button class="btn btn-small cr-mega-button pull-right"
+                        ng-show="isAuthenticated()"
+                        ng-click="saveEnterprise()"
+                        ui-sref="root.enterpriseActions">
 
                     <i class="fa fa-caret-right fa-2x"></i>
                     <span>&nbsp;</span>
@@ -150,7 +148,8 @@
                 </button>
 
 
-                <button class="btn btn-small cr-theme-green cr-mega-button pull-right" ng-disabled="loading == true"
+                <button class="btn btn-small cr-theme-green cr-mega-button pull-right"
+                        ng-disabled="loading == true"
                         ng-hide="isAuthenticated()"
                         ng-click="saveEnterprise()">
                     <i class="fa fa-save"></i>
@@ -169,7 +168,7 @@
         <div class="row">
 
             <div class="col-md-12">
-                <p class="cr-outo" ng-bind-html="'register.outro' | translate"></p>
+                <p class="cr-outro" ng-bind-html="'register.outro' | translate"></p>
             </div>
         </div>
 
