Enterprise: Adding Power Consumption as free Text

--- a/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
@@ -116,7 +116,7 @@
 
                 <!-- Q5220 account.powerconsumercategory.labe -->
                 <cr-question label="account.powerconsumercategory.label">
-                    <cr-text ng-model="getAccount().powerComsumerCategory" ng-multiline="true"></cr-text>
+                    <cr-text ng-model="getAccount().powerConsumption" ng-multiline="true"></cr-text>
                 </cr-question>
 
                 <!-- agreement -->
