--- a/app/eu/factorx/citizens/angular/views/authority/actions/authority-actions.html
+++ b/app/eu/factorx/citizens/angular/views/authority/actions/authority-actions.html
@@ -49,7 +49,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <button ui-sref="root.enterpriseAccount"
+                <button ng-click="toAccount()"
                         class="pull-left cr-mega-button">
                     <i class="fa fa-caret-left fa-2x"></i>
                     <span>&nbsp;</span>
