--- a/app/eu/factorx/citizens/angular/views/authority/actions/authority-actions.html
+++ b/app/eu/factorx/citizens/angular/views/authority/actions/authority-actions.html
@@ -17,7 +17,7 @@
         <div class="row cr-profile-header">
 
             <div class="col-md-12">
-                <p class="cr-intro" ng-bind-html="'actions.intro' | translate"></p>
+                <p class="cr-intro" ng-bind-html="'enterprise.actions.intro' | translate"></p>
             </div>
         </div>
 
