--- a/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
@@ -115,7 +115,7 @@
                 </cr-question>
 
                 <!-- Q5220 account.powerconsumercategory.labe -->
-                <cr-question label="account.powerconsumercategory.label">
+                <cr-question label="account.powerconsumercategory_enterprise.label">
                     <cr-text ng-model="getAccount().powerConsumption" ng-multiline="true"></cr-text>
                 </cr-question>
 
