--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -3,6 +3,7 @@
 @import "_cr-topic";
 @import "_cr-slider";
 @import "_cr-text";
+@import "_cr-double";
 @import "_cr-multi-text";
 @import "_cr-modal";
 @import "_cr-profile";
