--- a/app/assets/_cr-double.less
+++ b/app/assets/_cr-double.less
@@ -2,6 +2,7 @@
 .cr-double {
     margin: 0;
     padding: 0;
+    display: inline-block;
     .cr-double-input {
 
         border-radius: 0;
@@ -10,5 +11,10 @@
         line-height: inherit;
         height: auto;
         box-shadow: none;
+
+        &:read-only {
+            background: none;
+            border: none;
+        }
     }
 }
