--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -23,6 +23,7 @@
         <script src='@routes.Assets.at("components/angular-i18n/angular-locale_fr-fr.js")'></script>
         <script src='@routes.Assets.at("components/angular-animate/angular-animate.min.js")'></script>
         <script src='@routes.Assets.at("components/angular-sanitize/angular-sanitize.min.js")'></script>
+        <script src='@routes.Assets.at("components/angular-cookies/angular-cookies.min.js")'></script>
         <script src='@routes.Assets.at("components/angular-route/angular-route.min.js")'></script>
         <script src='@routes.Assets.at("components/angular-dynamic-locale/src/tmhDynamicLocale.js")'></script>
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap.js")'></script>
