--- a/app/eu/factorx/citizens/angular/views/authority/account/authority-account.html
+++ b/app/eu/factorx/citizens/angular/views/authority/account/authority-account.html
@@ -116,8 +116,10 @@
 
                 <!-- Q5220 account.powerconsumercategory.labe -->
                 <cr-question label="account.powerconsumercategory_enterprise.label">
-                    <cr-slider ng-steps="getOptions('powerconsumercategory')"
-                               ng-model="getAccount().powerComsumerCategory" vertical="true"></cr-slider>
+                    <cr-text ng-model="getAccount().powerConsumption" ng-multiline="false"></cr-text>
+                    <p class="cr-error" ng-show="validation.powerConsumption.valid() == false && noSubmitYet == false"
+                       ng-bind-html="'account.errorMessage.powerConsumption' | translate"></p>
+
                 </cr-question>
 
                 <!-- agreement -->
