--- a/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
+++ b/app/eu/factorx/citizens/angular/views/enterprise/account/enterprise-account.html
@@ -116,7 +116,7 @@
 
                 <!-- Q5220 account.powerconsumercategory.labe -->
                 <cr-question label="account.powerconsumercategory_enterprise.label">
-                    <cr-text ng-model="getAccount().powerConsumption" ng-multiline="true"></cr-text>
+                    <cr-text ng-model="getAccount().powerConsumption" ng-multiline="false"></cr-text>
                     <p class="cr-error" ng-show="validation.powerConsumption.valid() == false && noSubmitYet == false"
                        ng-bind-html="'account.errorMessage.powerConsumption' | translate"></p>
                 </cr-question>
